--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "~18.2.79",
     "expo": "~51.0.8",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
